<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".FoodActivity">

	<ImageView
		android:id="@+id/image"
		android:layout_width="160dp"
		android:layout_height="90dp"
		android:layout_margin="10dp"
		android:contentDescription="@string/app_name"
		android:scaleType="fitXY"
		android:src="@drawable/ic_launcher_background"
		app:layout_constraintBottom_toTopOf="@id/title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:textAlignment="center"
		app:layout_constraintBottom_toTopOf="@id/description"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/image"
		android:text="@string/dummy"/>

	<TextView
		android:id="@+id/description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:textAlignment="viewStart"
		app:layout_constraintBottom_toTopOf="@id/datetime"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:text="@string/dummy"
		app:layout_constraintTop_toBottomOf="@id/title" />

	<TextView
		android:id="@+id/datetime"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:textAlignment="viewStart"
		app:layout_constraintBottom_toTopOf="@id/price"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:text="@string/dummy"
		app:layout_constraintTop_toBottomOf="@id/description" />

	<TextView
		android:id="@+id/price"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:textAlignment="viewStart"
		app:layout_constraintBottom_toTopOf="@id/quantity"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:text="@string/dummy"
		app:layout_constraintTop_toBottomOf="@id/datetime" />

	<TextView
		android:id="@+id/quantity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:textAlignment="viewStart"
		app:layout_constraintBottom_toTopOf="@id/location"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:text="@string/dummy"
		app:layout_constraintTop_toBottomOf="@id/price" />

	<TextView
		android:id="@+id/location"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:textAlignment="viewStart"
		app:layout_constraintBottom_toTopOf="@id/map"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:text="@string/dummy"
		app:layout_constraintTop_toBottomOf="@id/quantity" />

	<androidx.fragment.app.FragmentContainerView
		android:id="@+id/map"
		android:name="com.google.android.gms.maps.SupportMapFragment"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:layout_margin="10dp"
		app:layout_constraintBottom_toTopOf="@id/cart"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/location"
		tools:context=".FoodActivity" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/cart"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:onClick="onAdd"
		android:text="@string/add_to_cart"
		android:textAllCaps="false"
		app:layout_constraintBottom_toTopOf="@id/pay"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/map" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/pay"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:onClick="onPay"
		android:text="@string/buy_with_g_pay"
		android:textAllCaps="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/cart" />


</androidx.constraintlayout.widget.ConstraintLayout>